<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.adm.appservicios.Activity.AccountActivity">

    <include
        android:id="@+id/bar_back"
        layout="@layout/bar_back"
        tools:layout_constraintTop_creator="1"
        tools:layout_constraintRight_creator="1"
        android:layout_height="0dp"
        app:layout_constraintRight_toRightOf="parent"
        tools:layout_constraintLeft_creator="1"
        android:layout_width="368dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />

    <ImageView
        android:layout_height="40dp"
        android:layout_width="169dp"
        android:id="@+id/imageView2"
        android:src="@drawable/ic_raiting"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="32dp"
        app:layout_constraintTop_toBottomOf="@+id/view2"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        >
    </ImageView>

    <android.support.v7.widget.CardView
        android:id="@+id/view2"
        android:layout_width="130dp"
        android:layout_height="130dp"
        android:layout_marginTop="90dp"
        android:elevation="12dp"
        android:innerRadius="0dp"
        android:shape="ring"
        android:thicknessRatio="1.9"
        app:cardCornerRadius="60dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_constraintTop_creator="1"
        >
        <ImageView
            android:layout_height="130dp"
            android:layout_width="match_parent"
            android:id="@+id/imageProfileUSRACT"
            android:src="@drawable/user_default"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true">
        </ImageView>
    </android.support.v7.widget.CardView>

    <android.support.design.widget.TextInputLayout
        android:layout_width="243dp"
        android:layout_height="51dp"
        android:layout_marginLeft="34dp"
        android:layout_marginTop="22dp"
        android:textColorHint="@color/colorPrimaryDark"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView2"
        android:id="@+id/textInputLayout3">

        <EditText
            android:id="@+id/edit_name"
            android:layout_width="243dp"
            android:layout_height="51dp"
            android:hint="@string/name"
            android:textColor="@color/main1"
            tools:layout_editor_absoluteX="34dp"
            tools:layout_editor_absoluteY="334dp"
            />

    </android.support.design.widget.TextInputLayout>


    <android.support.design.widget.TextInputLayout
        android:layout_width="243dp"
        android:layout_height="51dp"
        android:layout_marginLeft="34dp"
        android:layout_marginTop="100dp"
        android:textColorHint="@color/colorPrimaryDark"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView2">

        <EditText
            android:id="@+id/editText_telefono"
            android:layout_width="243dp"
            android:layout_height="51dp"
            android:hint="@string/telefono_celular"
            android:inputType="textEmailAddress"
            android:textColor="@color/main1"
            tools:layout_editor_absoluteX="34dp"
            tools:layout_editor_absoluteY="334dp"/>

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="243dp"
        android:layout_height="51dp"
        android:layout_marginLeft="34dp"
        android:layout_marginTop="173dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView2">
        <EditText
            android:id="@+id/edit_telefono"
            android:layout_width="243dp"
            android:layout_height="51dp"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:textColor="@color/main1"
            tools:layout_editor_absoluteX="34dp"
            tools:layout_editor_absoluteY="334dp"/>

    </android.support.design.widget.TextInputLayout>

    <Button
        android:id="@+id/btn_send_image"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Enviar"
        app:layout_constraintTop_toTopOf="@+id/textInputLayout3"
        android:layout_marginTop="3dp"
        android:layout_marginRight="16dp"
        app:layout_constraintRight_toRightOf="parent"/>


</android.support.constraint.ConstraintLayout>
