<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.adm.appservicios.Fragments.Archivos">

    <!-- Header-->
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:gravity="center|top"
        android:orientation="vertical">

        <!-- Header -->
        <!--android:layout_weight="1"-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center|top"
            android:orientation="vertical">

            <android.support.v7.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
                android:id="@+id/card_view_header"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="10dp"
                card_view:cardCornerRadius="4dp"
                card_view:elevation="14dp"
                card_view:layout_constraintBottom_toBottomOf="parent"
                card_view:layout_constraintHorizontal_bias="0.0"
                card_view:layout_constraintLeft_toLeftOf="parent"
                card_view:layout_constraintRight_toRightOf="parent"
                card_view:layout_constraintTop_toTopOf="parent"
                card_view:layout_constraintVertical_bias="0.0"
                tools:layout_constraintBottom_creator="1"
                tools:layout_constraintLeft_creator="1"
                tools:layout_constraintRight_creator="1"
                tools:layout_constraintTop_creator="1">

                <android.support.constraint.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <ImageView
                        android:id="@+id/card_header_icon"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="8dp"
                        android:src="@drawable/ic_arrow_right_black_24dp"
                        card_view:layout_constraintBottom_toBottomOf="parent"
                        card_view:layout_constraintRight_toRightOf="parent"
                        card_view:layout_constraintTop_toTopOf="parent"></ImageView>

                    <TextView
                        android:id="@+id/card_header_textView_tittle"
                        style="@style/CardViewHeader"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="26dp"
                        android:layout_marginTop="15dp"
                        android:text="@string/pregunta"
                        card_view:layout_constraintLeft_toLeftOf="parent"
                        card_view:layout_constraintTop_toTopOf="parent"></TextView>

                    <TextView
                        android:id="@+id/card_header_textView_description"
                        style="@style/CardViewDescription"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="8dp"
                        android:layout_marginLeft="26dp"
                        android:layout_marginTop="8dp"
                        android:text="@string/sugerencia_empleo"
                        card_view:layout_constraintBottom_toBottomOf="parent"
                        card_view:layout_constraintLeft_toLeftOf="parent"
                        card_view:layout_constraintTop_toBottomOf="@+id/card_header_textView_tittle"></TextView>

                </android.support.constraint.ConstraintLayout>
            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
                android:id="@+id/card_view_item"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="10dp"
                card_view:cardCornerRadius="4dp"
                card_view:elevation="14dp"
                card_view:layout_constraintBottom_toBottomOf="parent"
                card_view:layout_constraintLeft_toLeftOf="parent"
                card_view:layout_constraintRight_toRightOf="parent"
                card_view:layout_constraintTop_toTopOf="parent"
                card_view:layout_constraintVertical_bias="0.0"
                tools:layout_constraintBottom_creator="1"
                tools:layout_constraintLeft_creator="1"
                tools:layout_constraintRight_creator="1"
                tools:layout_constraintTop_creator="1">

                <android.support.constraint.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <ImageView
                        android:id="@+id/card_item_icon"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="8dp"
                        android:src="@drawable/ic_arrow_right_black_24dp"
                        card_view:layout_constraintBottom_toBottomOf="parent"
                        card_view:layout_constraintRight_toRightOf="parent"
                        card_view:layout_constraintTop_toTopOf="parent"></ImageView>

                    <TextView
                        android:id="@+id/card_item_textView_tittle"
                        style="@style/CardViewHeader"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="26dp"
                        android:layout_marginTop="15dp"
                        card_view:layout_constraintLeft_toLeftOf="parent"
                        card_view:layout_constraintTop_toTopOf="parent"></TextView>

                    <TextView
                        android:id="@+id/card_item_textView_description"
                        style="@style/CardViewDescription"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="26dp"
                        android:layout_marginTop="4dp"
                        android:layout_marginBottom="50dp"
                        card_view:layout_constraintLeft_toLeftOf="parent"
                        card_view:layout_constraintTop_toBottomOf="@+id/card_item_textView_tittle"></TextView>

                </android.support.constraint.ConstraintLayout>
            </android.support.v7.widget.CardView>

        </LinearLayout>

        <!-- Footer -->
        <LinearLayout
            android:id="@+id/linear1"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <Button
                android:id="@+id/identificacion_ofi"
                style="@style/Widget.AppCompat.Button.Colored"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:layout_gravity="center"
                android:text="Identificacion"
                android:textColor="@color/white" />
            <Button
                android:id="@+id/photo_titulo"
                style="@style/Widget.AppCompat.Button.Colored"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:layout_gravity="center"
                android:text="Titulo o Certificado"
                android:textColor="@color/white" />
            <Button
                android:id="@+id/photo_perfil"
                style="@style/Widget.AppCompat.Button.Colored"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:layout_gravity="center"
                android:text="Foto perfil"
                android:textColor="@color/white" />
            <Button
                android:id="@+id/photo"
                style="@style/Widget.AppCompat.Button.Colored"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:layout_gravity="center"
                android:text="Foto"
                android:textColor="@color/white" />

            <Button
                android:id="@+id/btn_send_docs"
                style="@style/Widget.AppCompat.Button.Colored"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:layout_gravity="center"
                android:text="@string/send"
                android:textColor="@color/white" />
        </LinearLayout>

    </LinearLayout >

</android.support.constraint.ConstraintLayout>
